--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,30 @@
 }
 .nav-links{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   text-align: center;
   background-color: black;
   color: white;
   list-style: none;
+  padding: 10px;
+  flex-wrap: wrap;
+ 
 }
-
-.nav-links li{
+.nav-links li  a:hover{
+  transition: 1s;
+  background-color: aqua;
+}
+.nav-links li a{
   color: white;
+  margin-bottom: 10px;
+  border: 1px solid gray;
+  background-color: gray;
+  border-radius: 5px;
+  text-transform: uppercase;
+  display: block;
+  margin-right: 3px;
+  text-decoration: none;
+  
 }
 .items{
   display: flex;
@@ -23,6 +38,7 @@
   justify-content: space-between;
 
 }
+
 .sportTitle{
   color: white;
 }
@@ -36,13 +52,21 @@ img{
 .source{
   color: black;
   font-weight: 800;
+  background-color: white;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  
 }
-
+.itemSport:hover{
+  transition: 1s;
+  scale: 0.9;
+}
 @media(min-width:320px){
   .itemSport{
     width: 100%;
     max-width: 100%;
     border: 1px solid black;
+    border-radius: 5px;
     background-color:gray;
     color: white;
     margin-bottom: 20px;
@@ -72,4 +96,31 @@ img{
     width: 19%;
     max-width: 19%;
   }
+}
+span{
+  border: 1px solid black;
+  background-color: black;
+  color: white;
+  border-radius: 5px;
+  margin-right: 5px;
+  display: block;
+  margin-bottom: 5px;
+}
+.portals{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.portals a{
+  text-decoration: none;
+}
+footer{
+  background-color: gray;
+  padding: 10px;
+}
+
+
+.portals a:hover{
+  transition: 1s;
+  scale: 1.2;
 }
