--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+
 }
 body{
   font-family: 'Quicksand', sans-serif;
@@ -8,7 +9,7 @@ body{
   background-image: linear-gradient(90deg,#471629 15%,#712744 49%,#471629 85%);
   display: flex;
   align-items: center;
-  padding: 0 40px;
+  padding: 10px 40px;
 }
 ul{
   padding: 0 10px;
@@ -81,7 +82,7 @@ display: none;
   }
   
   .nav-links li{
-    opacity: 0;
+    opacity: 1;
     width: 100%;
     
   }
@@ -802,4 +803,18 @@ border-bottom: 2px solid grey;
 .sectionFive .widget-bottom-wrapper{
   width: 48%;
 }
+}
+
+.hide{
+  display: none;
+}
+
+.weather-item img{
+  width: 30px;
+  height: 30px;
+}
+.current-date{
+  padding: 0 10px;
+  font-weight: 800;
+  color: #471629;
 }
